Updated the MOD35_L2 granule and enabled data comparison

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -130,7 +130,7 @@
     "                               'downscale_size' : [0.01802, 0.01802]}\n",
     "\n",
     "mod35l2_non_production_info = {'collection' : Collection(id='C1257437479-LAADSCDUAT'),\n",
-    "                               'granule_id' : 'G1259231639-LAADSCDUAT',\n",
+    "                               'granule_id' : 'G1261599141-LAADSCDUAT',\n",
     "                               'variable' : ['Cloud_Mask'],\n",
     "                               'downscale_size' : [0.01802, 0.01802]}\n",
     "\n",
@@ -243,36 +243,27 @@
     "    mod35l2_test = True\n",
     "    mod08d3_test = True\n",
     "    \n",
-    "    if not compare_dimensions(reference_data['MOD021KM'], mod021km_compare_file):\n",
-    "    # Input data is currently outdated on UAT. Will activate when data is updated.\n",
-    "    # if compare_dimensions(reference_data['MOD021KM'], mod021km_compare_file:\n",
-    "        # if not compare_data(reference_data['MOD021KM'], mod021km_compare_file:\n",
-    "        #     print_error('MOD021KM data mismatch.')\n",
-    "        #     mod021km_test = False\n",
-    "    \n",
-    "    # else:\n",
+    "    if compare_dimensions(reference_data['MOD021KM'], mod021km_compare_file):\n",
+    "        if not compare_data(reference_data['MOD021KM'], mod021km_compare_file):\n",
+    "            print_error('MOD021KM data mismatch.')\n",
+    "            mod021km_test = False\n",
+    "    else:\n",
     "        print_error('MOD021KM data dimension mismatch.')\n",
     "        mod021km_test = False\n",
     "    \n",
-    "    if not compare_dimensions(reference_data['MOD35_L2'], mod35l2_compare_file):\n",
-    "    # Input data is currently outdated on UAT. Will activate when data is updated.\n",
-    "    # if compare_dimensions(reference_data['MOD35_L2'], mod35l2_compare_file):\n",
-    "        # if not compare_data(reference_data['MOD35_L2'], mod35l2_compare_file):\n",
-    "        #     print_error('MOD35_L2 data mismatch.')\n",
-    "        #     mod35l2_test = False\n",
-    "    \n",
-    "    # else:\n",
+    "    if compare_dimensions(reference_data['MOD35_L2'], mod35l2_compare_file):\n",
+    "        if not compare_data(reference_data['MOD35_L2'], mod35l2_compare_file):\n",
+    "            print_error('MOD35_L2 data mismatch.')\n",
+    "            mod35l2_test = False\n",
+    "    else:\n",
     "        print_error('MOD35_L2 data dimension mismatch.')\n",
     "        mod35l2_test = False\n",
     "    \n",
-    "    if not compare_dimensions(reference_data['MOD08_D3'], mod08d3_compare_file):\n",
-    "    # Input data is currently outdated on UAT. Will activate when data is updated.\n",
-    "    # if compare_dimensions(reference_data['MOD08_D3'], mod08d3_compare_file):\n",
-    "        # if not compare_data(reference_data['MOD08_D3'], mod08d3_compare_file):\n",
-    "        #     print_error('MOD08_D3 data mismatch.')\n",
-    "        #     mod08d3_test = False\n",
-    "    \n",
-    "    # else:\n",
+    "    if compare_dimensions(reference_data['MOD08_D3'], mod08d3_compare_file):\n",
+    "        if not compare_data(reference_data['MOD08_D3'], mod08d3_compare_file):\n",
+    "            print_error('MOD08_D3 data mismatch.')\n",
+    "            mod08d3_test = False\n",
+    "    else:\n",
     "        print_error('MOD08_D3 data dimension mismatch.')\n",
     "        mod08d3_test = False\n",
     "\n",
