DAS-2214: pre-commit changes for all repos.

--- a/test/geoloco/Geoloco_Regression.ipynb
+++ b/test/geoloco/Geoloco_Regression.ipynb
@@ -33,9 +33,16 @@
     "\n",
     "from harmony import Client, Collection, Environment, Request\n",
     "\n",
-    "from utilities import (submit_and_download, get_dim_sizes, get_sds_data,\n",
-    "                       remove_results_files, print_error, print_success,\n",
-    "                       compare_dimensions, compare_data)"
+    "from utilities import (\n",
+    "    submit_and_download,\n",
+    "    get_dim_sizes,\n",
+    "    get_sds_data,\n",
+    "    remove_results_files,\n",
+    "    print_error,\n",
+    "    print_success,\n",
+    "    compare_dimensions,\n",
+    "    compare_data,\n",
+    ")"
    ]
   },
   {
@@ -89,10 +96,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "host_environment = {'http://localhost:3000': Environment.LOCAL,\n",
-    "                    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
-    "                    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
-    "                    'https://harmony.earthdata.nasa.gov': Environment.PROD}\n",
+    "host_environment = {\n",
+    "    'http://localhost:3000': Environment.LOCAL,\n",
+    "    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
+    "    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
+    "    'https://harmony.earthdata.nasa.gov': Environment.PROD,\n",
+    "}\n",
     "\n",
     "\n",
     "harmony_environment = host_environment.get(harmony_host_url)\n",
@@ -124,32 +133,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mod021km_non_production_info = {'collection' : Collection(id='C1256826282-LAADSCDUAT'),\n",
-    "                               'granule_id' : 'G1259320275-LAADSCDUAT',\n",
-    "                               'variable' : ['EV_250_Aggr1km_RefSB'],\n",
-    "                               'downscale_size' : [0.01802, 0.01802]}\n",
+    "mod021km_non_production_info = {\n",
+    "    'collection': Collection(id='C1256826282-LAADSCDUAT'),\n",
+    "    'granule_id': 'G1259320275-LAADSCDUAT',\n",
+    "    'variable': ['EV_250_Aggr1km_RefSB'],\n",
+    "    'downscale_size': [0.01802, 0.01802],\n",
+    "}\n",
     "\n",
-    "mod35l2_non_production_info = {'collection' : Collection(id='C1257437479-LAADSCDUAT'),\n",
-    "                               'granule_id' : 'G1261599141-LAADSCDUAT',\n",
-    "                               'variable' : ['Cloud_Mask'],\n",
-    "                               'downscale_size' : [0.01802, 0.01802]}\n",
+    "mod35l2_non_production_info = {\n",
+    "    'collection': Collection(id='C1257437479-LAADSCDUAT'),\n",
+    "    'granule_id': 'G1261599141-LAADSCDUAT',\n",
+    "    'variable': ['Cloud_Mask'],\n",
+    "    'downscale_size': [0.01802, 0.01802],\n",
+    "}\n",
     "\n",
-    "mod08d3_non_production_info = {'collection' : Collection(id='C1257773477-LAADSCDUAT'),\n",
-    "                               'granule_id' : 'G1259320277-LAADSCDUAT',\n",
-    "                               'variable' : ['Aerosol_Optical_Depth_Land_Ocean_Mean'],\n",
-    "                               'downscale_size' : [2, 2]}\n",
+    "mod08d3_non_production_info = {\n",
+    "    'collection': Collection(id='C1257773477-LAADSCDUAT'),\n",
+    "    'granule_id': 'G1259320277-LAADSCDUAT',\n",
+    "    'variable': ['Aerosol_Optical_Depth_Land_Ocean_Mean'],\n",
+    "    'downscale_size': [2, 2],\n",
+    "}\n",
     "\n",
     "geo_proj4_string = '+a=6378137.0 +b=6356752.3142451793 +no_defs +proj=latlong'\n",
     "\n",
     "resampling_string = 'NN'\n",
     "\n",
-    "file_indicators = {'MOD021KM': 'EV_250_Aggr1km_RefSB_1.hdf',\n",
-    "                   'MOD35_L2': 'Cloud_Mask_1.hdf',\n",
-    "                   'MOD08_D3': 'Aerosol_Optical_Depth_Land_Ocean_Mean.hdf'}\n",
+    "file_indicators = {\n",
+    "    'MOD021KM': 'EV_250_Aggr1km_RefSB_1.hdf',\n",
+    "    'MOD35_L2': 'Cloud_Mask_1.hdf',\n",
+    "    'MOD08_D3': 'Aerosol_Optical_Depth_Land_Ocean_Mean.hdf',\n",
+    "}\n",
     "\n",
-    "reference_data = {'MOD021KM': 'reference_data/MOD021KM.A2023001.0020.061.psrpcs_001701802061.EV_250_Aggr1km_RefSB_1.hdf',\n",
-    "                  'MOD35_L2': 'reference_data/MOD35_L2.A2023001.0020.061.psrpcs_001701881013.Cloud_Mask_1.hdf',\n",
-    "                  'MOD08_D3': 'reference_data/MOD08_D3.A2023001.061.psrpcs_001701881265.Aerosol_Optical_Depth_Land_Ocean_Mean.hdf'}"
+    "reference_data = {\n",
+    "    'MOD021KM': 'reference_data/MOD021KM.A2023001.0020.061.psrpcs_001701802061.EV_250_Aggr1km_RefSB_1.hdf',\n",
+    "    'MOD35_L2': 'reference_data/MOD35_L2.A2023001.0020.061.psrpcs_001701881013.Cloud_Mask_1.hdf',\n",
+    "    'MOD08_D3': 'reference_data/MOD08_D3.A2023001.061.psrpcs_001701881265.Aerosol_Optical_Depth_Land_Ocean_Mean.hdf',\n",
+    "}"
    ]
   },
   {
@@ -167,28 +186,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mod021km_geoloco_env = {Environment.LOCAL: mod021km_non_production_info,\n",
-    "                       Environment.UAT: mod021km_non_production_info,\n",
-    "                       Environment.SIT: mod021km_non_production_info}\n",
-    "mod35l2_geoloco_env = {Environment.LOCAL: mod35l2_non_production_info,\n",
-    "                       Environment.UAT: mod35l2_non_production_info,\n",
-    "                       Environment.SIT: mod35l2_non_production_info}\n",
-    "mod08d3_geoloco_env = {Environment.LOCAL: mod08d3_non_production_info,\n",
-    "                       Environment.UAT: mod08d3_non_production_info,\n",
-    "                       Environment.SIT: mod08d3_non_production_info}\n",
+    "mod021km_geoloco_env = {\n",
+    "    Environment.LOCAL: mod021km_non_production_info,\n",
+    "    Environment.UAT: mod021km_non_production_info,\n",
+    "    Environment.SIT: mod021km_non_production_info,\n",
+    "}\n",
+    "mod35l2_geoloco_env = {\n",
+    "    Environment.LOCAL: mod35l2_non_production_info,\n",
+    "    Environment.UAT: mod35l2_non_production_info,\n",
+    "    Environment.SIT: mod35l2_non_production_info,\n",
+    "}\n",
+    "mod08d3_geoloco_env = {\n",
+    "    Environment.LOCAL: mod08d3_non_production_info,\n",
+    "    Environment.UAT: mod08d3_non_production_info,\n",
+    "    Environment.SIT: mod08d3_non_production_info,\n",
+    "}\n",
     "\n",
     "if harmony_environment in mod021km_geoloco_env:\n",
-    "    mod021km_geoloco_info =  mod021km_geoloco_env[harmony_environment]\n",
+    "    mod021km_geoloco_info = mod021km_geoloco_env[harmony_environment]\n",
     "else:\n",
     "    mod021km_geoloco_info = None\n",
     "\n",
     "if harmony_environment in mod35l2_geoloco_env:\n",
-    "    mod35l2_geoloco_info =  mod35l2_geoloco_env[harmony_environment]\n",
+    "    mod35l2_geoloco_info = mod35l2_geoloco_env[harmony_environment]\n",
     "else:\n",
     "    mod35l2_geoloco_info = None\n",
     "\n",
     "if harmony_environment in mod08d3_geoloco_env:\n",
-    "    mod08d3_geoloco_info =  mod08d3_geoloco_env[harmony_environment]\n",
+    "    mod08d3_geoloco_info = mod08d3_geoloco_env[harmony_environment]\n",
     "else:\n",
     "    mod08d3_geoloco_info = None"
    ]
@@ -210,39 +235,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if (mod021km_geoloco_info is not None and \n",
-    "    mod35l2_geoloco_info is not None and\n",
-    "    mod08d3_geoloco_info is not None):\n",
+    "if (\n",
+    "    mod021km_geoloco_info is not None\n",
+    "    and mod35l2_geoloco_info is not None\n",
+    "    and mod08d3_geoloco_info is not None\n",
+    "):\n",
     "\n",
-    "    mod021km_request = Request(collection=mod021km_geoloco_info['collection'],\n",
-    "                               granule_id=mod021km_geoloco_info['granule_id'],\n",
-    "                               variables=mod021km_geoloco_info['variable'],\n",
-    "                               scale_size=mod021km_geoloco_info['downscale_size'],\n",
-    "                               crs=geo_proj4_string,\n",
-    "                               interpolation=resampling_string)\n",
+    "    mod021km_request = Request(\n",
+    "        collection=mod021km_geoloco_info['collection'],\n",
+    "        granule_id=mod021km_geoloco_info['granule_id'],\n",
+    "        variables=mod021km_geoloco_info['variable'],\n",
+    "        scale_size=mod021km_geoloco_info['downscale_size'],\n",
+    "        crs=geo_proj4_string,\n",
+    "        interpolation=resampling_string,\n",
+    "    )\n",
     "\n",
-    "    mod35l2_request = Request(collection=mod35l2_geoloco_info['collection'],\n",
-    "                              granule_id=mod35l2_geoloco_info['granule_id'],\n",
-    "                              variables=mod35l2_geoloco_info['variable'],\n",
-    "                              scale_size=mod35l2_geoloco_info['downscale_size'],\n",
-    "                              crs=geo_proj4_string,\n",
-    "                              interpolation=resampling_string)\n",
+    "    mod35l2_request = Request(\n",
+    "        collection=mod35l2_geoloco_info['collection'],\n",
+    "        granule_id=mod35l2_geoloco_info['granule_id'],\n",
+    "        variables=mod35l2_geoloco_info['variable'],\n",
+    "        scale_size=mod35l2_geoloco_info['downscale_size'],\n",
+    "        crs=geo_proj4_string,\n",
+    "        interpolation=resampling_string,\n",
+    "    )\n",
     "\n",
-    "    mod08d3_request = Request(collection=mod08d3_geoloco_info['collection'],\n",
-    "                              granule_id=mod08d3_geoloco_info['granule_id'],\n",
-    "                              variables=mod08d3_geoloco_info['variable'],\n",
-    "                              scale_size=mod08d3_geoloco_info['downscale_size'],\n",
-    "                              crs=geo_proj4_string,\n",
-    "                              interpolation=resampling_string)\n",
+    "    mod08d3_request = Request(\n",
+    "        collection=mod08d3_geoloco_info['collection'],\n",
+    "        granule_id=mod08d3_geoloco_info['granule_id'],\n",
+    "        variables=mod08d3_geoloco_info['variable'],\n",
+    "        scale_size=mod08d3_geoloco_info['downscale_size'],\n",
+    "        crs=geo_proj4_string,\n",
+    "        interpolation=resampling_string,\n",
+    "    )\n",
     "\n",
-    "    mod021km_compare_file = submit_and_download(harmony_client, mod021km_request, file_indicators['MOD021KM'])\n",
-    "    mod35l2_compare_file = submit_and_download(harmony_client, mod35l2_request, file_indicators['MOD35_L2'])\n",
-    "    mod08d3_compare_file = submit_and_download(harmony_client, mod08d3_request, file_indicators['MOD08_D3'])\n",
+    "    mod021km_compare_file = submit_and_download(\n",
+    "        harmony_client, mod021km_request, file_indicators['MOD021KM']\n",
+    "    )\n",
+    "    mod35l2_compare_file = submit_and_download(\n",
+    "        harmony_client, mod35l2_request, file_indicators['MOD35_L2']\n",
+    "    )\n",
+    "    mod08d3_compare_file = submit_and_download(\n",
+    "        harmony_client, mod08d3_request, file_indicators['MOD08_D3']\n",
+    "    )\n",
     "\n",
     "    mod021km_test = True\n",
     "    mod35l2_test = True\n",
     "    mod08d3_test = True\n",
-    "    \n",
+    "\n",
     "    if compare_dimensions(reference_data['MOD021KM'], mod021km_compare_file):\n",
     "        if not compare_data(reference_data['MOD021KM'], mod021km_compare_file):\n",
     "            print_error('MOD021KM data mismatch.')\n",
@@ -250,7 +289,7 @@
     "    else:\n",
     "        print_error('MOD021KM data dimension mismatch.')\n",
     "        mod021km_test = False\n",
-    "    \n",
+    "\n",
     "    if compare_dimensions(reference_data['MOD35_L2'], mod35l2_compare_file):\n",
     "        if not compare_data(reference_data['MOD35_L2'], mod35l2_compare_file):\n",
     "            print_error('MOD35_L2 data mismatch.')\n",
@@ -258,7 +297,7 @@
     "    else:\n",
     "        print_error('MOD35_L2 data dimension mismatch.')\n",
     "        mod35l2_test = False\n",
-    "    \n",
+    "\n",
     "    if compare_dimensions(reference_data['MOD08_D3'], mod08d3_compare_file):\n",
     "        if not compare_data(reference_data['MOD08_D3'], mod08d3_compare_file):\n",
     "            print_error('MOD08_D3 data mismatch.')\n",
@@ -275,9 +314,11 @@
     "        print_success('Geoloco Reprojection/Resampling/Regridding requests.')\n",
     "    else:\n",
     "        raise Exception('Geoloco test suite failed')\n",
-    "        \n",
+    "\n",
     "else:\n",
-    "    print(f'Geoloco is not configured for this environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(\n",
+    "        f'Geoloco is not configured for this environment: \"{harmony_environment}\" - skipping test.'\n",
+    "    )"
    ]
   }
  ],
