--- a/test/harmony/Harmony.ipynb
+++ b/test/harmony/Harmony.ipynb
@@ -64,17 +64,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expected_service_names = ['harmony/service-example', \n",
-    "                          'nasa/harmony-gdal-adapter', \n",
-    "                          'podaac/l2-subsetter']\n",
+    "expected_service_names = [\n",
+    "    'harmony/service-example',\n",
+    "    'nasa/harmony-gdal-adapter',\n",
+    "    'podaac/l2-subsetter',\n",
+    "]\n",
     "\n",
     "versions_response = requests.get(f'{harmony_host_url}/versions')\n",
     "versions_response.raise_for_status()\n",
     "actual_services = versions_response.json()\n",
     "\n",
     "for expected_service_name in expected_service_names:\n",
-    "    assert any([service.get('name') == expected_service_name\n",
-    "                for service in actual_services]), f'Could not find service: {expected_service_name}'\n",
+    "    assert any(\n",
+    "        [service.get('name') == expected_service_name for service in actual_services]\n",
+    "    ), f'Could not find service: {expected_service_name}'\n",
     "\n",
     "print('All expected services returned from /versions endpoint.')"
    ]
