--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "from harmony import Collection, Environment, Client, Request\n",
-    "from utility import  print_success \n",
+    "from utility import print_success\n",
     "from tempfile import TemporaryDirectory\n",
     "import xarray as xr\n",
     "\n",
@@ -99,12 +99,12 @@
    "source": [
     "non_production_collection = {\n",
     "    'merra_collection': Collection(id='C1245662776-EEDTEST'),\n",
-    "    'atl16_collection': Collection(id='C1238589498-EEDTEST')\n",
+    "    'atl16_collection': Collection(id='C1238589498-EEDTEST'),\n",
     "}\n",
     "\n",
     "non_prod_granule_data = {\n",
     "    'merra_granules': ['G1245662793-EEDTEST', 'G1245662791-EEDTEST'],\n",
-    "    'atl16_granules': ['G1245614996-EEDTEST', 'G1245614968-EEDTEST']\n",
+    "    'atl16_granules': ['G1245614996-EEDTEST', 'G1245614968-EEDTEST'],\n",
     "}\n",
     "\n",
     "\n",
@@ -112,17 +112,17 @@
     "    'https://harmony.uat.earthdata.nasa.gov': {\n",
     "        **non_production_collection,\n",
     "        **non_prod_granule_data,\n",
-    "        'env': Environment.UAT\n",
+    "        'env': Environment.UAT,\n",
     "    },\n",
     "    'https://harmony.sit.earthdata.nasa.gov': {\n",
     "        **non_production_collection,\n",
     "        **non_prod_granule_data,\n",
-    "        'env': Environment.SIT\n",
+    "        'env': Environment.SIT,\n",
     "    },\n",
     "    'http://localhost:3000': {\n",
     "        **non_production_collection,\n",
-    "        **non_prod_granule_data,        \n",
-    "        'env': Environment.LOCAL\n",
+    "        **non_prod_granule_data,\n",
+    "        'env': Environment.LOCAL,\n",
     "    },\n",
     "}\n",
     "\n",
@@ -153,26 +153,41 @@
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
-    "    merra_request = Request(collection=environment_information['merra_collection'],\n",
-    "                           granule_id=environment_information['merra_granules'][0],\n",
-    "                           interpolation='Elliptical Weighted Averaging',\n",
-    "                           scale_size=(2.5, 2.5), scale_extent=(-180, -90, 180, 90),\n",
-    "                           crs='+proj=latlong +datum=WGS84 +no_defs', height=72, width=144)                       \n",
+    "    merra_request = Request(\n",
+    "        collection=environment_information['merra_collection'],\n",
+    "        granule_id=environment_information['merra_granules'][0],\n",
+    "        interpolation='Elliptical Weighted Averaging',\n",
+    "        scale_size=(2.5, 2.5),\n",
+    "        scale_extent=(-180, -90, 180, 90),\n",
+    "        crs='+proj=latlong +datum=WGS84 +no_defs',\n",
+    "        height=72,\n",
+    "        width=144,\n",
+    "    )\n",
     "    merra_job_id = harmony_client.submit(merra_request)\n",
     "    harmony_client.wait_for_processing(merra_job_id, show_progress=True)\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        downloaded_grid_outputs = [\n",
     "            file_future.result()\n",
-    "            for file_future\n",
-    "            in harmony_client.download_all(merra_job_id, overwrite=True, directory=temp_dir)\n",
+    "            for file_future in harmony_client.download_all(\n",
+    "                merra_job_id, overwrite=True, directory=temp_dir\n",
+    "            )\n",
     "        ]\n",
-    "        reference_ds = xr.open_dataset('reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.nc4', engine='netcdf4')\n",
-    "        output_ds =  xr.open_dataset(Path(temp_dir, downloaded_grid_outputs[0]), engine='netcdf4')\n",
-    "        assert output_ds.equals(reference_ds), 'Generated data did not match reference dataset'\n",
+    "        reference_ds = xr.open_dataset(\n",
+    "            'reference_data/MERRA2_400.tavg1_2d_slv_Nx.20210605_regridded.nc4',\n",
+    "            engine='netcdf4',\n",
+    "        )\n",
+    "        output_ds = xr.open_dataset(\n",
+    "            Path(temp_dir, downloaded_grid_outputs[0]), engine='netcdf4'\n",
+    "        )\n",
+    "        assert output_ds.equals(\n",
+    "            reference_ds\n",
+    "        ), 'Generated data did not match reference dataset'\n",
     "\n",
     "    print_success('Regrid MERRA2 Data Success')\n",
     "else:\n",
-    "    print('Skipping test: regridder regression tests not configured for this environment.')"
+    "    print(\n",
+    "        'Skipping test: regridder regression tests not configured for this environment.'\n",
+    "    )"
    ]
   },
   {
@@ -197,29 +212,43 @@
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
-    "    atl16_request = Request(collection=environment_information['atl16_collection'],\n",
-    "                           granule_id=environment_information['atl16_granules'][0],\n",
-    "                           interpolation='Elliptical Weighted Averaging',\n",
-    "                           scale_size=(5.0, 5.0),\n",
-    "                           scale_extent=(-180, -90, 180, 90),\n",
-    "                           crs='EPSG:4326', height=36, width=72) \n",
+    "    atl16_request = Request(\n",
+    "        collection=environment_information['atl16_collection'],\n",
+    "        granule_id=environment_information['atl16_granules'][0],\n",
+    "        interpolation='Elliptical Weighted Averaging',\n",
+    "        scale_size=(5.0, 5.0),\n",
+    "        scale_extent=(-180, -90, 180, 90),\n",
+    "        crs='EPSG:4326',\n",
+    "        height=36,\n",
+    "        width=72,\n",
+    "    )\n",
     "    atl16_job_id = harmony_client.submit(atl16_request)\n",
     "    harmony_client.wait_for_processing(atl16_job_id, show_progress=True)\n",
     "\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        downloaded_grid_outputs = [\n",
     "            file_future.result()\n",
-    "            for file_future\n",
-    "            in harmony_client.download_all(atl16_job_id, overwrite=True, directory=temp_dir)\n",
+    "            for file_future in harmony_client.download_all(\n",
+    "                atl16_job_id, overwrite=True, directory=temp_dir\n",
+    "            )\n",
     "        ]\n",
-    "        reference_ds = xr.open_dataset('reference_data/ATL16_20200308000030_11040601_004_01_regridded.h5', engine='netcdf4')\n",
-    "        output_ds =  xr.open_dataset(Path(temp_dir, downloaded_grid_outputs[0]), engine='netcdf4')\n",
+    "        reference_ds = xr.open_dataset(\n",
+    "            'reference_data/ATL16_20200308000030_11040601_004_01_regridded.h5',\n",
+    "            engine='netcdf4',\n",
+    "        )\n",
+    "        output_ds = xr.open_dataset(\n",
+    "            Path(temp_dir, downloaded_grid_outputs[0]), engine='netcdf4'\n",
+    "        )\n",
     "\n",
-    "        assert output_ds.equals(reference_ds), 'Regridded ATL16 data did not match reference dataset'\n",
+    "        assert output_ds.equals(\n",
+    "            reference_ds\n",
+    "        ), 'Regridded ATL16 data did not match reference dataset'\n",
     "\n",
     "    print_success('Regrid ATL16 Data Success')\n",
     "else:\n",
-    "    print('Skipping test: regridder regression tests not configured for this environment.')"
+    "    print(\n",
+    "        'Skipping test: regridder regression tests not configured for this environment.'\n",
+    "    )"
    ]
   }
  ],
