--- a/test/swath-projector/SwathProjector_Regression.ipynb
+++ b/test/swath-projector/SwathProjector_Regression.ipynb
@@ -53,8 +53,12 @@
     "\n",
     "from harmony import Client, Collection, Environment, Request\n",
     "\n",
-    "from utilities import (compare_results_to_reference_file, print_success,\n",
-    "                       remove_results_files, submit_and_download)"
+    "from utilities import (\n",
+    "    compare_results_to_reference_file,\n",
+    "    print_success,\n",
+    "    remove_results_files,\n",
+    "    submit_and_download,\n",
+    ")"
    ]
   },
   {
@@ -96,10 +100,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "host_environment = {'http://localhost:3000': Environment.LOCAL,\n",
-    "                    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
-    "                    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
-    "                    'https://harmony.earthdata.nasa.gov': Environment.PROD}\n",
+    "host_environment = {\n",
+    "    'http://localhost:3000': Environment.LOCAL,\n",
+    "    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
+    "    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
+    "    'https://harmony.earthdata.nasa.gov': Environment.PROD,\n",
+    "}\n",
     "\n",
     "\n",
     "harmony_environment = host_environment.get(harmony_host_url)\n",
@@ -125,12 +131,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "swath_projector_non_prod_information = {'collection': Collection(id='C1233860183-EEDTEST'),\n",
-    "                                        'granule_id': 'G1233860549-EEDTEST'}\n",
+    "swath_projector_non_prod_information = {\n",
+    "    'collection': Collection(id='C1233860183-EEDTEST'),\n",
+    "    'granule_id': 'G1233860549-EEDTEST',\n",
+    "}\n",
     "\n",
-    "swath_projector_env = {Environment.LOCAL: swath_projector_non_prod_information,\n",
-    "                       Environment.SIT: swath_projector_non_prod_information,\n",
-    "                       Environment.UAT: swath_projector_non_prod_information}\n",
+    "swath_projector_env = {\n",
+    "    Environment.LOCAL: swath_projector_non_prod_information,\n",
+    "    Environment.SIT: swath_projector_non_prod_information,\n",
+    "    Environment.UAT: swath_projector_non_prod_information,\n",
+    "}\n",
     "\n",
     "if harmony_environment in swath_projector_env:\n",
     "    swath_projector_info = swath_projector_env[harmony_environment]\n",
@@ -169,20 +179,26 @@
    "source": [
     "if swath_projector_info is not None:\n",
     "    epsg_file_name = 'swath_projector_epsg.nc4'\n",
-    "    epsg_request = Request(collection=swath_projector_info['collection'],\n",
-    "                           granule_id=[swath_projector_info['granule_id']],\n",
-    "                           crs='EPSG:4326', scale_extent=[42, -27, 52, -10],\n",
-    "                           temporal={'start': datetime(2020, 1, 15), 'stop': datetime(2020, 1, 16)})\n",
+    "    epsg_request = Request(\n",
+    "        collection=swath_projector_info['collection'],\n",
+    "        granule_id=[swath_projector_info['granule_id']],\n",
+    "        crs='EPSG:4326',\n",
+    "        scale_extent=[42, -27, 52, -10],\n",
+    "        temporal={'start': datetime(2020, 1, 15), 'stop': datetime(2020, 1, 16)},\n",
+    "    )\n",
     "\n",
     "    submit_and_download(harmony_client, epsg_request, epsg_file_name)\n",
     "    assert exists(epsg_file_name), 'Unsuccessful Swath Projector EPSG code request.'\n",
     "\n",
-    "    compare_results_to_reference_file(epsg_file_name,\n",
-    "                                      'reference_files/swath_projector_epsg_reference.nc4')\n",
+    "    compare_results_to_reference_file(\n",
+    "        epsg_file_name, 'reference_files/swath_projector_epsg_reference.nc4'\n",
+    "    )\n",
     "\n",
     "    print_success('Swath Projector EPSG code request.')\n",
     "else:\n",
-    "    print(f'The Swath Projector is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(\n",
+    "        f'The Swath Projector is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
+    "    )"
    ]
   },
   {
@@ -205,20 +221,28 @@
     "if swath_projector_info is not None:\n",
     "    proj4_string_file_name = 'swath_projector_proj4.nc4'\n",
     "    proj4_lcc = '+proj=lcc +lat_1=43 +lat_2=62 +lat_0=30 +lon_0=10 +x_0=0 +y_0=0 +ellps=intl +units=m +no_defs'\n",
-    "    proj4_string_request = Request(collection=swath_projector_info['collection'],\n",
-    "                                   granule_id=[swath_projector_info['granule_id']],\n",
-    "                                   crs=proj4_lcc, interpolation='near',\n",
-    "                                   temporal={'start': datetime(2020, 1, 15), 'stop': datetime(2020, 1, 16)})\n",
+    "    proj4_string_request = Request(\n",
+    "        collection=swath_projector_info['collection'],\n",
+    "        granule_id=[swath_projector_info['granule_id']],\n",
+    "        crs=proj4_lcc,\n",
+    "        interpolation='near',\n",
+    "        temporal={'start': datetime(2020, 1, 15), 'stop': datetime(2020, 1, 16)},\n",
+    "    )\n",
     "\n",
     "    submit_and_download(harmony_client, proj4_string_request, proj4_string_file_name)\n",
-    "    assert exists(proj4_string_file_name), 'Unsuccessful Swath Projector interpolation and Proj4 request.'\n",
+    "    assert exists(\n",
+    "        proj4_string_file_name\n",
+    "    ), 'Unsuccessful Swath Projector interpolation and Proj4 request.'\n",
     "\n",
-    "    compare_results_to_reference_file(proj4_string_file_name,\n",
-    "                                      'reference_files/swath_projector_proj4_reference.nc4')\n",
+    "    compare_results_to_reference_file(\n",
+    "        proj4_string_file_name, 'reference_files/swath_projector_proj4_reference.nc4'\n",
+    "    )\n",
     "\n",
     "    print_success('Swath Projector interpolation and Proj4 request')\n",
     "else:\n",
-    "    print(f'The Swath Projector is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(\n",
+    "        f'The Swath Projector is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
+    "    )"
    ]
   },
   {
