--- a/test/variable-subsetter/VariableSubsetter_Regression.ipynb
+++ b/test/variable-subsetter/VariableSubsetter_Regression.ipynb
@@ -47,8 +47,12 @@
     "from harmony import Client, Collection, Environment, Request\n",
     "import numpy as np\n",
     "\n",
-    "from utilities import (compare_results_to_reference_file, print_success,\n",
-    "                       remove_results_files, submit_and_download)"
+    "from utilities import (\n",
+    "    compare_results_to_reference_file,\n",
+    "    print_success,\n",
+    "    remove_results_files,\n",
+    "    submit_and_download,\n",
+    ")"
    ]
   },
   {
@@ -90,10 +94,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "host_environment = {'http://localhost:3000': Environment.LOCAL,\n",
-    "                    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
-    "                    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
-    "                    'https://harmony.earthdata.nasa.gov': Environment.PROD}\n",
+    "host_environment = {\n",
+    "    'http://localhost:3000': Environment.LOCAL,\n",
+    "    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
+    "    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
+    "    'https://harmony.earthdata.nasa.gov': Environment.PROD,\n",
+    "}\n",
     "\n",
     "harmony_environment = host_environment.get(harmony_host_url)\n",
     "\n",
@@ -129,8 +135,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var_subsetter_non_prod_information = {'collection': Collection(id='<enter collection concept ID>'),\n",
-    "                                      'granule_id': '<enter granule concept ID>'}\n",
+    "var_subsetter_non_prod_information = {\n",
+    "    'collection': Collection(id='<enter collection concept ID>'),\n",
+    "    'granule_id': '<enter granule concept ID>',\n",
+    "}\n",
     "\n",
     "var_subsetter_env = {}\n",
     "# var_subsetter_env = {Environment.LOCAL: var_subsetter_non_prod_information,\n",
@@ -164,21 +172,26 @@
    "source": [
     "if var_subsetter_info is not None:\n",
     "    single_var_file_name = 'var_subsetter.nc4'\n",
-    "    single_var_request = Request(collection=var_subsetter_info['collection'],\n",
-    "                                 granule_id=[var_subsetter_info['granule_id']],\n",
-    "                                 variables=['<enter variable full name>'])\n",
+    "    single_var_request = Request(\n",
+    "        collection=var_subsetter_info['collection'],\n",
+    "        granule_id=[var_subsetter_info['granule_id']],\n",
+    "        variables=['<enter variable full name>'],\n",
+    "    )\n",
     "\n",
     "    submit_and_download(harmony_client, single_var_request, single_var_file_name)\n",
-    "    assert exists(single_var_file_name), 'Unsuccessful single-variable Variable Subsetter request.'\n",
+    "    assert exists(\n",
+    "        single_var_file_name\n",
+    "    ), 'Unsuccessful single-variable Variable Subsetter request.'\n",
     "\n",
     "    compare_results_to_reference_file(\n",
-    "        single_var_file_name,\n",
-    "        'reference_files/var_subsetter_single_var_reference.nc4'\n",
+    "        single_var_file_name, 'reference_files/var_subsetter_single_var_reference.nc4'\n",
     "    )\n",
     "\n",
     "    print_success('Variable subsetter single variable request.')\n",
     "else:\n",
-    "    print(f'The Variable Subsetter is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(\n",
+    "        f'The Variable Subsetter is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
+    "    )"
    ]
   },
   {
@@ -202,20 +215,25 @@
    "source": [
     "if var_subsetter_info is not None:\n",
     "    all_variables_file_name = 'var_subsetter_all_vars.nc4'\n",
-    "    all_variables_request = Request(collection=var_subsetter_info['collection'],\n",
-    "                                    granule_id=[var_subsetter_info['granule_id']])\n",
+    "    all_variables_request = Request(\n",
+    "        collection=var_subsetter_info['collection'],\n",
+    "        granule_id=[var_subsetter_info['granule_id']],\n",
+    "    )\n",
     "\n",
     "    submit_and_download(harmony_client, all_variables_request, all_variables_file_name)\n",
-    "    assert exists(all_variables_file_name), 'Unsuccessful Variable Subsetter all-variable request.'\n",
+    "    assert exists(\n",
+    "        all_variables_file_name\n",
+    "    ), 'Unsuccessful Variable Subsetter all-variable request.'\n",
     "\n",
     "    compare_results_to_reference_file(\n",
-    "        all_variables_file_name,\n",
-    "        'reference_files/var_subsetter_all_vars_reference.nc4'\n",
+    "        all_variables_file_name, 'reference_files/var_subsetter_all_vars_reference.nc4'\n",
     "    )\n",
     "\n",
     "    print_success('Variable Subsetter all variable request.')\n",
     "else:\n",
-    "    print(f'The Variable Subsetter is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(\n",
+    "        f'The Variable Subsetter is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
+    "    )"
    ]
   },
   {
