--- a/test/harmony-regression/HarmonyRegression.ipynb
+++ b/test/harmony-regression/HarmonyRegression.ipynb
@@ -33,12 +33,23 @@
    },
    "outputs": [],
    "source": [
-    "#harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'\n",
+    "# harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'\n",
     "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
-    "#harmony_host_url = 'https://harmony.earthdata.nasa.gov'\n",
+    "# harmony_host_url = 'https://harmony.earthdata.nasa.gov'\n",
     "\n",
     "# Import libraries used throughout the notebook\n",
-    "from notebook_helpers import get, post, show, get_data_urls, show_async, show_async_condensed, show_shape, print_async_status, check_bbox_subset, check_stac\n",
+    "from notebook_helpers import (\n",
+    "    get,\n",
+    "    post,\n",
+    "    show,\n",
+    "    get_data_urls,\n",
+    "    show_async,\n",
+    "    show_async_condensed,\n",
+    "    show_shape,\n",
+    "    print_async_status,\n",
+    "    check_bbox_subset,\n",
+    "    check_stac,\n",
+    ")\n",
     "import json\n",
     "import intake\n",
     "import re"
@@ -104,10 +115,12 @@
    "source": [
     "from harmony import Client, Collection, Environment, Request\n",
     "\n",
-    "host_environment = {'http://localhost:3000': Environment.LOCAL,\n",
-    "                    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
-    "                    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
-    "                    'https://harmony.earthdata.nasa.gov': Environment.PROD}\n",
+    "host_environment = {\n",
+    "    'http://localhost:3000': Environment.LOCAL,\n",
+    "    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
+    "    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
+    "    'https://harmony.earthdata.nasa.gov': Environment.PROD,\n",
+    "}\n",
     "\n",
     "\n",
     "harmony_environment = host_environment.get(harmony_host_url)\n",
@@ -134,22 +147,20 @@
    "outputs": [],
    "source": [
     "if is_not_prod:\n",
-    "    #By default, this reformats to tiff\n",
+    "    # By default, this reformats to tiff\n",
     "    params = {\n",
     "        'subset': [\n",
     "            'lon(-20:90)',\n",
     "            'lat(0:60)',\n",
-    "            'time(\"2020-01-15T00:00:00Z\":\"2020-01-15T01:00:00Z\")'\n",
+    "            'time(\"2020-01-15T00:00:00Z\":\"2020-01-15T01:00:00Z\")',\n",
     "        ]\n",
     "    }\n",
     "\n",
     "    response = get(\n",
     "        coverages_root.format(\n",
-    "            root=harmony_host_url,\n",
-    "            collection=l3_collection,\n",
-    "            variable='all'\n",
+    "            root=harmony_host_url, collection=l3_collection, variable='all'\n",
     "        ),\n",
-    "        params=params\n",
+    "        params=params,\n",
     "    )\n",
     "\n",
     "    show(response, example_vars)"
@@ -164,11 +175,9 @@
     "if is_not_prod:\n",
     "    response = get(\n",
     "        coverages_root.format(\n",
-    "            root=harmony_host_url,\n",
-    "            collection=l3_collection,\n",
-    "            variable='green_var'\n",
+    "            root=harmony_host_url, collection=l3_collection, variable='green_var'\n",
     "        ),\n",
-    "        params=params\n",
+    "        params=params,\n",
     "    )\n",
     "\n",
     "    show(response, color_index=1)"
@@ -192,16 +201,13 @@
    "outputs": [],
    "source": [
     "if is_not_prod:\n",
-    "    #By default, this reformats to tiff\n",
+    "    # By default, this reformats to tiff\n",
     "    response = get(\n",
-    "        edr_root.format(\n",
-    "            root=harmony_host_url,\n",
-    "            collection=l3_collection\n",
-    "        ),\n",
+    "        edr_root.format(root=harmony_host_url, collection=l3_collection),\n",
     "        params={\n",
     "            'bbox': '-20,0,90,60',\n",
-    "            'datetime': '2020-01-15T00:00:00Z/2020-01-15T01:00:00Z'\n",
-    "        }\n",
+    "            'datetime': '2020-01-15T00:00:00Z/2020-01-15T01:00:00Z',\n",
+    "        },\n",
     "    )\n",
     "\n",
     "    show(response, example_vars)"
@@ -215,15 +221,12 @@
    "source": [
     "if is_not_prod:\n",
     "    response = get(\n",
-    "        edr_root.format(\n",
-    "            root=harmony_host_url,\n",
-    "            collection=l3_collection\n",
-    "        ),\n",
+    "        edr_root.format(root=harmony_host_url, collection=l3_collection),\n",
     "        params={\n",
     "            'bbox': '-20,0,90,60',\n",
     "            'datetime': '2020-01-15T00:00:00Z/2020-01-15T01:00:00Z',\n",
-    "            'parameter-name': 'green_var'\n",
-    "        }\n",
+    "            'parameter-name': 'green_var',\n",
+    "        },\n",
     "    )\n",
     "\n",
     "    show(response, color_index=1)"
@@ -249,17 +252,15 @@
     "if is_not_prod:\n",
     "    response = get(\n",
     "        coverages_root.format(\n",
-    "            root=harmony_host_url,\n",
-    "            collection=l3_collection,\n",
-    "            variable='all'\n",
+    "            root=harmony_host_url, collection=l3_collection, variable='all'\n",
     "        ),\n",
     "        params={\n",
     "            'subset': [\n",
     "                'lon(-20:90)',\n",
     "                'lat(0:60)',\n",
-    "                'time(\"2020-01-01T00:00:00Z\":\"2020-01-05T01:00:00Z\")'\n",
+    "                'time(\"2020-01-01T00:00:00Z\":\"2020-01-05T01:00:00Z\")',\n",
     "            ]\n",
-    "        }\n",
+    "        },\n",
     "    )\n",
     "    show_async_condensed(response)"
    ]
@@ -283,34 +284,40 @@
    "outputs": [],
    "source": [
     "if is_not_prod:\n",
-    "    #Add 3 requests\n",
+    "    # Add 3 requests\n",
     "    response1 = get(\n",
-    "        coverages_root.format(root=harmony_host_url, collection=l3_collection, variable='all'),\n",
-    "        params={'format': 'image/tiff', 'maxResults': '20'}\n",
+    "        coverages_root.format(\n",
+    "            root=harmony_host_url, collection=l3_collection, variable='all'\n",
+    "        ),\n",
+    "        params={'format': 'image/tiff', 'maxResults': '20'},\n",
     "    )\n",
     "\n",
     "    response2 = get(\n",
-    "        coverages_root.format(root=harmony_host_url, collection=l3_collection, variable='all'),\n",
-    "        params={'format': 'image/tiff', 'maxResults': '20'}\n",
+    "        coverages_root.format(\n",
+    "            root=harmony_host_url, collection=l3_collection, variable='all'\n",
+    "        ),\n",
+    "        params={'format': 'image/tiff', 'maxResults': '20'},\n",
     "    )\n",
     "\n",
     "    response3 = get(\n",
-    "        coverages_root.format(root=harmony_host_url, collection=l3_collection, variable='all'),\n",
-    "        params={'format': 'image/tiff', 'maxResults': '20'}\n",
+    "        coverages_root.format(\n",
+    "            root=harmony_host_url, collection=l3_collection, variable='all'\n",
+    "        ),\n",
+    "        params={'format': 'image/tiff', 'maxResults': '20'},\n",
     "    )\n",
     "\n",
-    "    #List the requests\n",
+    "    # List the requests\n",
     "\n",
     "    jobs_root = '{root}/jobs'\n",
     "    my_jobs = jobs_root.format(root=harmony_host_url)\n",
-    "    response = get(my_jobs,params={'page': '1','limit': '10'})\n",
+    "    response = get(my_jobs, params={'page': '1', 'limit': '10'})\n",
     "    body = response.json()\n",
     "\n",
     "    for job in body['jobs']:\n",
     "        print_async_status(job)\n",
     "\n",
-    "    #Cancel one\n",
-    "    my_jobs_cancel_root=my_jobs+'/{job_id}/cancel'\n",
+    "    # Cancel one\n",
+    "    my_jobs_cancel_root = my_jobs + '/{job_id}/cancel'\n",
     "    response = post(my_jobs_cancel_root.format(job_id=response3.json()['jobID']))\n",
     "\n",
     "    print_async_status(response.json())\n",
@@ -342,15 +349,13 @@
    "source": [
     "zarr_response = get(\n",
     "    coverages_root.format(\n",
-    "        root=harmony_host_url,\n",
-    "        collection=l3_zarr_collection,\n",
-    "        variable='all'\n",
+    "        root=harmony_host_url, collection=l3_zarr_collection, variable='all'\n",
     "    ),\n",
     "    params={\n",
     "        'subset': 'time(\"2020-01-15T00:00:00Z\":\"2020-01-16T01:00:00Z\")',\n",
-    "        'maxResults': '3'\n",
+    "        'maxResults': '3',\n",
     "    },\n",
-    "    headers = {'accept': 'application/x-zarr'}\n",
+    "    headers={'accept': 'application/x-zarr'},\n",
     ")\n",
     "\n",
     "show_async(zarr_response)"
@@ -376,8 +381,7 @@
     "stac_root = '{root}/stac/{jobID}/{item}'\n",
     "\n",
     "stac_cat = intake.open_stac_catalog(\n",
-    "    stac_root.format(root=harmony_host_url, jobID=job, item=''),\n",
-    "    name='Harmony output'\n",
+    "    stac_root.format(root=harmony_host_url, jobID=job, item=''), name='Harmony output'\n",
     ")\n",
     "\n",
     "display(list(stac_cat))"
@@ -390,7 +394,11 @@
    "outputs": [],
    "source": [
     "for i in range(len(list(stac_cat))):\n",
-    "    display(intake.open_stac_item(stac_root.format(root=harmony_host_url,jobID=job,item=i)))\n",
+    "    display(\n",
+    "        intake.open_stac_item(\n",
+    "            stac_root.format(root=harmony_host_url, jobID=job, item=i)\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "entries = []\n",
     "for id, entry in stac_cat.search('type').items():\n",
@@ -414,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#da.plot.imshow()"
+    "# da.plot.imshow()"
    ]
   },
   {
@@ -460,18 +468,16 @@
    "source": [
     "response = get(\n",
     "    coverages_root.format(\n",
-    "        root=harmony_host_url,\n",
-    "        collection=l2ss_collection,\n",
-    "        variable='all'\n",
+    "        root=harmony_host_url, collection=l2ss_collection, variable='all'\n",
     "    ),\n",
     "    params={\n",
     "        'maxResults': '1',\n",
     "        'subset': [\n",
-    "           'lon(-160:160)',\n",
-    "           'lat(-80:80)',\n",
-    "           'time(\"2012-03-03T12:17:00\":\"2012-03-03T12:18:00\")'\n",
-    "        ]\n",
-    "    }\n",
+    "            'lon(-160:160)',\n",
+    "            'lat(-80:80)',\n",
+    "            'time(\"2012-03-03T12:17:00\":\"2012-03-03T12:18:00\")',\n",
+    "        ],\n",
+    "    },\n",
     ")\n",
     "\n",
     "if is_not_prod:\n",
@@ -497,9 +503,7 @@
    "source": [
     "response = get(\n",
     "    coverages_root.format(\n",
-    "        root=harmony_host_url,\n",
-    "        collection=l2ss_collection,\n",
-    "        variable='all'\n",
+    "        root=harmony_host_url, collection=l2ss_collection, variable='all'\n",
     "    ),\n",
     "    params={\n",
     "        'maxResults': '3',\n",
@@ -507,9 +511,9 @@
     "        'subset': [\n",
     "            'lon(-160:160)',\n",
     "            'lat(-80:80)',\n",
-    "             'time(\"2012-03-03T00:00:00Z\":\"2012-03-03T02:59:59Z\")'\n",
-    "        ]\n",
-    "    }\n",
+    "            'time(\"2012-03-03T00:00:00Z\":\"2012-03-03T02:59:59Z\")',\n",
+    "        ],\n",
+    "    },\n",
     ")\n",
     "\n",
     "if is_not_prod:\n",
@@ -535,8 +539,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_service_request = Request(collection=Collection(download_collection),\n",
-    "                                   max_results=1)\n",
+    "download_service_request = Request(\n",
+    "    collection=Collection(download_collection), max_results=1\n",
+    ")\n",
     "\n",
     "download_service_job_id = harmony_client.submit(download_service_request)\n",
     "download_service_json = harmony_client.result_json(download_service_job_id)\n",
