--- a/test/n2z/N2Z_Regression.ipynb
+++ b/test/n2z/N2Z_Regression.ipynb
@@ -77,7 +77,7 @@
     "    assert_result_has_correct_number_of_stores,\n",
     "    download_zarr_store,\n",
     "    get_zarr_store_location,\n",
-    "    print_success    \n",
+    "    print_success,\n",
     ")\n",
     "from tempfile import TemporaryDirectory\n",
     "import xarray as xr"
@@ -109,16 +109,16 @@
     "collection_data = {\n",
     "    'https://harmony.uat.earthdata.nasa.gov': {\n",
     "        **non_production_collection,\n",
-    "        'env': Environment.UAT\n",
+    "        'env': Environment.UAT,\n",
     "    },\n",
     "    'https://harmony.sit.earthdata.nasa.gov': {\n",
     "        **non_production_collection,\n",
-    "        'env': Environment.SIT\n",
+    "        'env': Environment.SIT,\n",
     "    },\n",
     "    'http://localhost:3000': {\n",
     "        **non_production_collection,\n",
     "        'env': Environment.LOCAL,\n",
-    "        'endpoint_url': 'http://localhost:4566'\n",
+    "        'endpoint_url': 'http://localhost:4566',\n",
     "    },\n",
     "}\n",
     "\n",
@@ -147,18 +147,20 @@
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
-    "    imrg_request1 = Request(collection=environment_information['imerg_collection'], \n",
-    "                            max_results=1,\n",
-    "                            concatenate=False,\n",
-    "                            format='application/x-zarr')\n",
+    "    imrg_request1 = Request(\n",
+    "        collection=environment_information['imerg_collection'],\n",
+    "        max_results=1,\n",
+    "        concatenate=False,\n",
+    "        format='application/x-zarr',\n",
+    "    )\n",
     "\n",
     "    job_id = harmony_client.submit(imrg_request1)\n",
     "    harmony_client.wait_for_processing(job_id, show_progress=True)\n",
     "    results1 = harmony_client.result_json(job_id)\n",
     "    assert_result_has_correct_number_of_stores(results1, 1)\n",
-    "    print_success('One granule, not aggregated, creates a single Zarr store.')    \n",
+    "    print_success('One granule, not aggregated, creates a single Zarr store.')\n",
     "else:\n",
-    "    print('Skipping test: N2Z regression tests not configured for this environment.')    "
+    "    print('Skipping test: N2Z regression tests not configured for this environment.')"
    ]
   },
   {
@@ -179,10 +181,12 @@
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
-    "    imrg_request2 = Request(collection=environment_information['imerg_collection'],\n",
-    "                            max_results=3,\n",
-    "                            concatenate=False,\n",
-    "                            format='application/x-zarr')\n",
+    "    imrg_request2 = Request(\n",
+    "        collection=environment_information['imerg_collection'],\n",
+    "        max_results=3,\n",
+    "        concatenate=False,\n",
+    "        format='application/x-zarr',\n",
+    "    )\n",
     "\n",
     "    job_id2 = harmony_client.submit(imrg_request2)\n",
     "    harmony_client.wait_for_processing(job_id2, show_progress=True)\n",
@@ -211,24 +215,28 @@
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
-    "    imrg_request3 = Request(collection=environment_information['imerg_collection'],\n",
-    "                            max_results=2,\n",
-    "                            concatenate=True,\n",
-    "                            format='application/x-zarr')\n",
+    "    imrg_request3 = Request(\n",
+    "        collection=environment_information['imerg_collection'],\n",
+    "        max_results=2,\n",
+    "        concatenate=True,\n",
+    "        format='application/x-zarr',\n",
+    "    )\n",
     "\n",
     "    job_id3 = harmony_client.submit(imrg_request3)\n",
     "    harmony_client.wait_for_processing(job_id3, show_progress=True)\n",
     "    results3 = harmony_client.result_json(job_id3)\n",
     "    assert_result_has_correct_number_of_stores(results3, 1)\n",
-    "    \n",
+    "\n",
     "    zarr_store = get_zarr_store_location(results3)\n",
     "    with TemporaryDirectory() as tmp_zarr_store:\n",
     "        download_zarr_store(zarr_store, tmp_zarr_store, endpoint_url)\n",
     "        downloaded_ds = xr.open_dataset(tmp_zarr_store, group='/Grid', engine='zarr')\n",
     "        reference_ds = xr.open_dataset('reference_data/sample.zarr', group='/Grid')\n",
-    "        assert downloaded_ds.equals(reference_ds), 'reference and output Zarr stores did not match'\n",
-    "        \n",
-    "    print_success('Two granules aggregated create a single Zarr store.')    "
+    "        assert downloaded_ds.equals(\n",
+    "            reference_ds\n",
+    "        ), 'reference and output Zarr stores did not match'\n",
+    "\n",
+    "    print_success('Two granules aggregated create a single Zarr store.')"
    ]
   },
   {
@@ -249,15 +257,17 @@
    "outputs": [],
    "source": [
     "if environment_information is not None:\n",
-    "    imrg_request4 = Request(collection=environment_information['imerg_collection'],\n",
-    "                            max_results=2,\n",
-    "                            format='application/x-zarr')\n",
+    "    imrg_request4 = Request(\n",
+    "        collection=environment_information['imerg_collection'],\n",
+    "        max_results=2,\n",
+    "        format='application/x-zarr',\n",
+    "    )\n",
     "\n",
     "    job_id4 = harmony_client.submit(imrg_request4)\n",
     "    harmony_client.wait_for_processing(job_id4, show_progress=True)\n",
     "    results4 = harmony_client.result_json(job_id4)\n",
     "    assert_result_has_correct_number_of_stores(results4, 2)\n",
-    "    print_success('Two granules create two Zarr stores.')    "
+    "    print_success('Two granules create two Zarr stores.')"
    ]
   }
  ],
